# ros2_ocs2

./: README.md
ocs2_basis/ocs2_core/: CMakeLists.txt  package.xml
ocs2_basis/ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2_basis/ocs2_core/include/ocs2_core/: PreComputation.h
ocs2_basis/ocs2_core/src/: Types.cpp
ocs2_basis/ocs2_core/src/augmented_lagrangian/: AugmentedLagrangian.cpp  StateAugmentedLagrangian.cpp  StateAugmentedLagrangianCollection.cpp  StateInputAugmentedLagrangian.cpp  StateInputAugmentedLagrangianCollection.cpp
ocs2_basis/ocs2_core/src/automatic_differentation/: CppAdInterface.cpp  CppAdSparsity.cpp  FiniteDifferenceMethods.cpp
ocs2_basis/ocs2_core/src/constraint/: LinearStateConstraint.cpp  LinearStateInputConstraint.cpp  StateConstraintCollection.cpp  StateConstraintCppAd.cpp  StateInputConstraintCollection.cpp  StateInputConstraintCppAd.cpp
ocs2_basis/ocs2_core/src/control/: FeedforwardController.cpp  LinearController.cpp  StateBasedLinearController.cpp
ocs2_basis/ocs2_core/src/cost/: QuadraticStateCost.cpp  QuadraticStateInputCost.cpp  StateCostCollection.cpp  StateCostCppAd.cpp  StateInputCostCollection.cpp  StateInputCostCppAd.cpp  StateInputGaussNewtonCostAd.cpp
ocs2_basis/ocs2_core/src/dynamics/: ControlledSystemBase.cpp  LinearSystemDynamics.cpp  SystemDynamicsBase.cpp  SystemDynamicsBaseAD.cpp  SystemDynamicsLinearizer.cpp  TransferFunctionBase.cpp
ocs2_basis/ocs2_core/src/integration/: Integrator.cpp  IntegratorBase.cpp  Observer.cpp  OdeBase.cpp  RungeKuttaDormandPrince5.cpp  SensitivityIntegrator.cpp  SensitivityIntegratorImpl.cpp  StateTriggeredEventHandler.cpp  SystemEventHandler.cpp
ocs2_basis/ocs2_core/src/loopshaping/: LoopshapingDefinition.cpp  LoopshapingFilter.cpp  LoopshapingPreComputation.cpp  LoopshapingPropertyTree.cpp
ocs2_basis/ocs2_core/src/misc/: LinearAlgebra.cpp  Log.cpp
ocs2_basis/ocs2_core/src/model_data/: Metrics.cpp  ModelData.cpp  Multiplier.cpp
ocs2_basis/ocs2_core/src/penalties/: MultidimensionalPenalty.cpp  Penalties.cpp
ocs2_basis/ocs2_core/src/reference/: ModeSchedule.cpp  TargetTrajectories.cpp
ocs2_basis/ocs2_core/src/soft_constraint/: StateInputSoftBoxConstraint.cpp  StateInputSoftConstraint.cpp  StateSoftConstraint.cpp
ocs2_basis/ocs2_core/src/thread_support/: ThreadPool.cpp
ocs2_basis/ocs2_core/test/model_data/: testMetrics.cpp  testMultiplier.cpp
ocs2_basis/ocs2_core/test/soft_constraint/: testSoftConstraint.cpp
ocs2_basis/ocs2_oc/: CMakeLists.txt  package.xml
ocs2_basis/ocs2_oc/src/approximate_model/: ChangeOfInputVariables.cpp  LinearQuadraticApproximator.cpp
ocs2_basis/ocs2_oc/src/multiple_shooting/: Helpers.cpp  Initialization.cpp  LagrangianEvaluation.cpp  MetricsComputation.cpp  PerformanceIndexComputation.cpp  ProjectionMultiplierCoefficients.cpp  Transcription.cpp
ocs2_basis/ocs2_oc/src/oc_problem/: LoopshapingOptimalControlProblem.cpp  OcpSize.cpp  OcpToKkt.cpp  OptimalControlProblem.cpp  OptimalControlProblemHelperFunction.cpp
ocs2_basis/ocs2_oc/src/oc_solver/: SolverBase.cpp
ocs2_basis/ocs2_oc/src/precondition/: Ruzi.cpp
ocs2_basis/ocs2_oc/src/rollout/: InitializerRollout.cpp  PerformanceIndicesRollout.cpp  RolloutBase.cpp  RolloutSettings.cpp  RootFinder.cpp  StateTriggeredRollout.cpp  TimeTriggeredRollout.cpp
ocs2_basis/ocs2_oc/src/search_strategy/: FilterLinesearch.cpp
ocs2_basis/ocs2_oc/src/synchronized_module/: LoopshapingReferenceManager.cpp  LoopshapingSynchronizedModule.cpp  ReferenceManager.cpp  SolverObserver.cpp
ocs2_basis/ocs2_oc/src/trajectory_adjustment/: TrajectorySpreading.cpp
ocs2_basis/ocs2_thirdparty/: CMakeLists.txt
ocs2_interfaces/ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_interfaces/ocs2_robotic_tools/src/common/: LoopshapingRobotInterface.cpp  RotationTransforms.cpp
ocs2_interfaces/ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_interfaces/ocs2_ros_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp  TargetTrajectoriesRosPublisher.cpp
ocs2_interfaces/ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp  RosMsgHelpers.cpp
ocs2_interfaces/ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_interfaces/ocs2_ros_interfaces/src/mrt/: MRT_ROS_Interface.cpp  (+2 more)
ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
ocs2_legged_robot_ros/launch/: basic.launch.py  dummy.launch.py  gait_command.launch.py  legged_robot_ddp.launch.py  legged_robot_ipm.launch.py  legged_robot_sqp.launch.py  mpc_ddp.launch.py  robot_target.launch.py
ocs2_legged_robot_ros/rviz/: legged_robot.rviz
ocs2_legged_robot_ros/src/: LeggedRobotDdpMpcNode.cpp  LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotIpmMpcNode.cpp  LeggedRobotPoseCommandNode.cpp  LeggedRobotSqpMpcNode.cpp
ocs2_legged_robot_ros/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
ocs2_mpc/ocs2_ddp/: CMakeLists.txt  README.md  package.xml
ocs2_mpc/ocs2_ddp/src/: ContinuousTimeLqr.cpp  DDP_HelperFunctions.cpp  DDP_Settings.cpp  GaussNewtonDDP.cpp  GaussNewtonDDP_MPC.cpp  HessianCorrection.cpp  ILQR.cpp  SLQ.cpp
ocs2_mpc/ocs2_ddp/test/: CircularKinematicsTest.cpp  Exp0Test.cpp  Exp1Test.cpp  testContinuousTimeLqr.cpp  testReachingTask.cpp
ocs2_mpc/ocs2_ipm/: CMakeLists.txt  README.md  package.xml
ocs2_mpc/ocs2_ipm/src/: IpmSolver.cpp
ocs2_mpc/ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_mpc/ocs2_mpc/src/: LoopshapingSystemObservation.cpp  MPC_BASE.cpp  MPC_MRT_Interface.cpp  MPC_Settings.cpp  MRT_BASE.cpp  SystemObservation.cpp
ocs2_mpc/ocs2_qp_solver/: CMakeLists.txt  package.xml
ocs2_mpc/ocs2_qp_solver/src/: Ocs2QpSolver.cpp  QpDiscreteTranscription.cpp  QpSolver.cpp  QpTrajectories.cpp
ocs2_mpc/ocs2_qp_solver/test/: testDiscreteTranscription.cpp  testOcs2QpSolver.cpp  testQpSolver.cpp
ocs2_mpc/ocs2_slp/: CMakeLists.txt  README.md  package.xml
ocs2_mpc/ocs2_slp/src/: SlpSolver.cpp
ocs2_mpc/ocs2_sqp/ocs2_sqp/: CMakeLists.txt  README.md  package.xml
ocs2_msgs/: CMakeLists.txt  package.xml
(+186 files in other folders)
