<?xml version="2.0"?>
<package>
    <name>ocs2_robotic_tools</name>
    <version>0.0.0</version>
    <description>The ocs2_robotic_tools package</description>

    <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
    <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
    <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

    <license>TODO</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>ocs2_oc</build_depend>
    <run_depend>ocs2_oc</run_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
